--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	background: rgb(230,230,230);
+	background: -moz-linear-gradient(45deg, 
+		rgba(230,230,230,1) 0%, 
+		rgba(215,219,255,1) 25%, 
+		rgba(234,234,237,1) 100%
+	);
+	background: -webkit-linear-gradient(45deg, 
+		rgba(230,230,230,1) 0%, 
+		rgba(215,219,255,1) 25%, 
+		rgba(234,234,237,1) 100%
+	);
+	background: linear-gradient(45deg, 
+		rgba(230,230,230,1) 0%, 
+		rgba(215,219,255,1) 25%, 
+		rgba(234,234,237,1) 100%
+	);
+	filter: progid:DXImageTransform.Microsoft.gradient(
+		startColorstr="#e6e6e6",
+		endColorstr="#eaeaed",
+		GradientType=1
+	);
+	background-size: cover;
+	background-repeat: no-repeat;
+	min-height: 97vh;
+	margin: 0;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
